[package]
name = "artnet_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.2.0" }
e1_20 = { git = "https://github.com/BenPeoplesInd/ansi_e1_20_rdm" }
bincode = "1.3.3"
